# propertytree
# Max Hermann, August 2013

cmake_minimum_required(VERSION 2.6)
project(propertytree)

include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/WintermuteCommon.cmake)

#---- Dependencies ------------------------------------------------------------

#-------------------
#  Boost
#-------------------
### --> So far we are only using header only dependencies, found in path
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost REQUIRED) #COMPONENTS system filesystem program_options 
add_definitions(-DBOOST_ALL_NO_LIB) # prevent boost automatic linkage on Windows
include_directories(${Boost_INCLUDE_DIR})
message(STATUS "Boost_INCLUDE_DIR=${Boost_INCLUDE_DIR}")
message(STATUS "Boost_LIBRARIES=${Boost_LIBRARIES}")
	
#-------------------
# Qt4
#-------------------
find_package(Qt4 COMPONENTS QtCore QtGui REQUIRED)
include(${QT_USE_FILE})

#---- Libraries & Executables -------------------------------------------------

#--- params lib (core parameter library) ---

add_library( params
	ParameterBase.h
	ParameterBase.cpp
	ParameterTypes.h
	ParameterIO.h
	ParameterIO.cpp
)

#--- params test program ---

add_executable(	testptree 
	testptree.cpp
)

target_link_libraries( testptree 
	params
	${BOOST_USED_LIBRARIES}
)

#--- qparams lib (Qt user interface) ---

set( qlib_SOURCE
	PropertyTreeWidget.h
	PropertyTreeDelegate.h
	)
set( qlib_HEADER
	PropertyTreeWidget.cpp
	PropertyTreeDelegate.cpp
	)

qt4_wrap_cpp( qlib_HEADER_MOC ${qlib_HEADER} )

#ADD_DEFINITIONS(-DQPARAMS_LIB)

source_group("Autogenerated Moc files" FILES ${qlib_HEADER_MOC})

add_library( qparams ${qlib_SOURCE} ${qlib_HEADER_MOC} ${qlib_HEADER} )

#--- qparams test program ---

set( qtest_SOURCE
	testptreegui.cpp
)

qt4_automoc( ${qtest_SOURCE} )

# No Qt resources yet
#set( qapp_RCCS qtest.qrc )
#qt4_add_resources( app_RCC_SRCS ${app_RCCS} )

add_executable( testptreegui
	${qtest_SOURCE}
)

target_link_libraries( testptreegui
	params
	qparams
	${QT_LIBRARIES}	
	${Boost_LIBRARIES}	
)
