# propertytree (param libraries)
# Max Hermann, August 2013

cmake_minimum_required(VERSION 2.6)
project(propertytree)

include(${CMAKE_CURRENT_SOURCE_DIR}/../cmake/WintermuteCommon.cmake)

#---- Dependencies ------------------------------------------------------------

#-------------------
#  Boost
#-------------------
### --> So far we are only using header only dependencies, found in path
set(Boost_USE_STATIC_LIBS ON)
find_package(Boost REQUIRED) #COMPONENTS system filesystem program_options 
add_definitions(-DBOOST_ALL_NO_LIB) # prevent boost automatic linkage on Windows
include_directories(${Boost_INCLUDE_DIR})
message(STATUS "Boost_INCLUDE_DIR=${Boost_INCLUDE_DIR}")
message(STATUS "Boost_LIBRARIES=${Boost_LIBRARIES}")
	
#-------------------
# Qt4
#-------------------
find_package(Qt4 COMPONENTS QtCore QtGui REQUIRED)
include(${QT_USE_FILE})

#---- Libraries & Executables -------------------------------------------------

#--- param lib (core parameter library) ---

set( param_INCLUDE_DIR "include/param" )
include_directories( "include" )
include_directories( ${param_INCLUDE_DIR} )

add_library( param
	ParameterBase.cpp
	ParameterIO.cpp
	#ParameterBase.h
	#ParameterTypes.h
	#ParameterIO.h
)

#--- param test program ---

add_executable(	testptree 
	testptree.cpp
)

target_link_libraries( testptree 
	param
	${BOOST_USED_LIBRARIES}
)

#--- qparam lib (Qt user interface) ---

set( qlib_HEADER
	${param_INCLUDE_DIR}/PropertyTreeWidget.h
	${param_INCLUDE_DIR}/PropertyTreeDelegate.h
	)
set( qlib_SOURCE
	PropertyTreeWidget.cpp
	PropertyTreeDelegate.cpp
	)

qt4_wrap_cpp( qlib_HEADER_MOC ${qlib_HEADER} )

#ADD_DEFINITIONS(-DQPARAMS_LIB)

source_group("Autogenerated Moc files" FILES ${qlib_HEADER_MOC})

add_library( qparam ${qlib_SOURCE} ${qlib_HEADER_MOC} ${qlib_HEADER} )

#--- qparam test program ---

set( qtest_SOURCE
	testptreegui.cpp
)

qt4_automoc( ${qtest_SOURCE} )

# No Qt resources yet
#set( qapp_RCCS qtest.qrc )
#qt4_add_resources( app_RCC_SRCS ${app_RCCS} )

add_executable( testptreegui
	${qtest_SOURCE}
)

target_link_libraries( testptreegui
	param
	qparam
	${QT_LIBRARIES}	
	${Boost_LIBRARIES}	
)
